WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150501
[GTK] Minor web editor fixes
https://bugs.webkit.org/show_bug.cgi?id=150501
Summary
[GTK] Minor web editor fixes
Claudio Saavedra
Reported
2015-10-23 08:27:48 PDT
[GTK] Minor web editor fixes
Attachments
Patch
(2.92 KB, patch)
2015-10-23 08:31 PDT
,
Claudio Saavedra
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2015-10-23 08:31:39 PDT
Created
attachment 263926
[details]
Patch
WebKit Commit Bot
Comment 2
2015-10-23 11:42:01 PDT
Comment on
attachment 263926
[details]
Patch Clearing flags on attachment: 263926 Committed
r191503
: <
http://trac.webkit.org/changeset/191503
>
WebKit Commit Bot
Comment 3
2015-10-23 11:42:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug