[GTK] Minor web editor fixes https://bugs.webkit.org/show_bug.cgi?id=150501

Reviewed by Carlos Garcia Campos.

* UIProcess/gtk/KeyBindingTranslator.cpp: Remove
"MoveParagraphForward/Backward" as these commands do not exist in
WebKit (anymore?).
* WebProcess/WebCoreSupport/gtk/WebEditorClientGtk.cpp:
(WebKit::WebEditorClient::executePendingEditorCommands):
Editor::Command can take a String, no need to convert to a C char.


Canonical link: https://commits.webkit.org/168656@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191503 268f45cc-cd09-0410-ab3c-d52691b4dbfc