Source/WebKit2/WebProcess/WebCoreSupport/gtk/WebEditorClientGtk.cpp
@@ -39,7 +39,7 @@ bool WebEditorClient::executePendingEditorCommands(Frame* frame, const Vector<WT
 {
     Vector<Editor::Command> commands;
     for (auto& commandString : pendingEditorCommands) {
-        Editor::Command command = frame->editor().command(commandString.utf8().data());
+        Editor::Command command = frame->editor().command(commandString);
         if (command.isTextInsertion() && !allowTextInsertion)
             return false;
 
